feat(validation): adicionar validações

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- beans validation-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<!-- lombok-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
