--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 8087
 
 spring:
-#  configuração do banco
+#  configuracao do banco
   datasource:
     url: jdbc:postgresql://localhost:5432/ead-authuser
     username: postgres
