--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+        <!-- filtros com specification-->
+        <dependency>
+            <groupId>net.kaczmarzyk</groupId>
+            <artifactId>specification-arg-resolver</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
 		<!-- lombok-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
