feat(logging): Adicionar logging com o log4j2

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,3 +17,11 @@ spring:
     properties:
       hibernate:
         show_sql: true # mostra as consultas no log
+
+# niveis de log
+logging:
+  level:
+    com.ead: TRACE
+    root: INFO
+    org.springframework.web: DEBUG
+    org.hibernate: INFO
