--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ server:
   port: 8087
 
 spring:
+  application:
+    name: ead-authuser-service
+
 #  configuracao do banco
   datasource:
     url: jdbc:postgresql://localhost:5432/ead-authuser
@@ -30,3 +33,11 @@ ead:
   api:
     url:
       course: 'http:://localhost8083'
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: 'http://localhost:8761/eureka' # endereco onde o eureka esta disponivel
+
+  instance:
+    hostname: localhost # para se registrar utilizando host
