feat(eureka): adicionar balanceamento de carga e discovery do serviço de course

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,7 +32,7 @@ logging:
 ead:
   api:
     url:
-      course: 'http:://localhost8083'
+      course: 'http://ead-course-service' # nome do servico de course
 
 eureka:
   client:
